# app-review-crawler

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  target_apps.json.example
.github/workflows/: ci_test.yml  release.yml
src/: errors.rs  logger.rs  main.rs  target_app.rs
src/response_processor/: app_store.rs  mod.rs  play_store.rs  traits.rs
src/review_crawler/: app_store.rs  mod.rs  play_store.rs  traits.rs
