[package]
name = "app-review-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance, asynchronous Rust application for crawling app reviews from both the Apple App Store and Google Play Store"
license = "MIT"
repository = "https://github.com/yourusername/app-review-crawler"
homepage = "https://github.com/yourusername/app-review-crawler"
documentation = "https://github.com/yourusername/app-review-crawler"
keywords = ["crawler", "app-store", "play-store", "reviews", "scraping", "async"]
categories = ["web-programming", "api-bindings", "data-processing"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "app-review-crawler"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
