[package]
name = "app-review-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance, asynchronous Rust application for crawling app reviews from both the Apple App Store and Google Play Store"
license = "MIT"
repository = "https://github.com/yourusername/app-review-crawler"
homepage = "https://github.com/yourusername/app-review-crawler"
documentation = "https://github.com/yourusername/app-review-crawler"
keywords = ["crawler", "app-store", "play-store", "reviews", "scraping", "async"]
categories = ["web-programming", "api-bindings", "data-processing"]
readme = "README.md"

[dependencies]
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
quick-xml = { version = "*", features = ["serialize"] }
csv = "*"
chrono = { version = "*", features = ["serde"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["fmt", "ansi"] }

[[bin]]
name = "app-review-crawler"
path = "src/main.rs"

